force-app/main/default/objects/ucinn_ascendv2__Record_New_Button_Default__mdt/ucinn_ascendv2__Record_New_Button_Default__mdt.object-meta.xml
<CustomObject>
    <description>Default values when creating a record using the Record New Button lightning component override.</description>
    <label>Record New Button Default</label>
    <pluralLabel>Record New Button Defaults</pluralLabel>
</CustomObject>