force-app/main/default/objects/ucinn_ascendv2__Record_New_Button_Default__mdt/fields/ucinn_ascendv2__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Default_Value__c</fullName>
    <inlineHelpText>Date and time field values must use the ISO 8601 format. For example:

Date: 2017-07-18
Datetime: 2017-07-18T03:00:00Z

For more info, look at force:createRecord documentation.</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>