force-app/main/default/objects/ucinn_ascendv2__Record_New_Button_Default__mdt/fields/ucinn_ascendv2__Record_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_API_Name__c</fullName>
    <description>Record type API name that will be using this default value. If both API and ID are filled out, ID will have priority.</description>
    <inlineHelpText>Record type API name that will be using this default value. If both API and ID are filled out, ID will have priority.</inlineHelpText>
    <label>Record Type API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>