force-app/main/default/objects/ucinn_ascendv2__Record_New_Button_Default__mdt/fields/ucinn_ascendv2__Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_ID__c</fullName>
    <description>Record Type ID of the Object that is being created. Leave blank to use this metadata as default.</description>
    <inlineHelpText>Record Type ID of the Object that is being created. Leave blank to use this metadata as default.</inlineHelpText>
    <label>Record Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>